src/features/textbook/Textbook.module.css
.paginationContainer {
  display: flex !important;
  align-items: center;
  background-color: white;
  border-radius: 15px;
  margin-top: 10px;
}
.cardsContainer {
  margin: 0 auto !important;
  display: flex !important;
  flex-wrap: wrap;
  justify-content: center;
}
.card {
  width: 100%;
  margin: 0.5rem;
}
.card:hover {
  box-shadow: 0px 4px 3px -3px rgb(0 0 0 / 30%),
    0px 3px 3px 0px rgb(0 0 0 / 24%), 0px 3px 5px 0px rgb(0 0 0 / 22%);
}
.button {
  margin: 0px 20px !important;
}
.cardContent {
  display: flex !important;
  padding: 10px !important;
  align-items: center;
}
.typography {
  margin-top: 20px !important;
}
.cardTitle {
  display: flex !important;
  align-items: center !important;
}
.cardSound {
  opacity: 0.7 !important;
  cursor: pointer !important;
  transition: all 0.5s !important;
}
.cardSound:hover {
  opacity: 1 !important;
  cursor: pointer !important;
}
.picture {
  max-width: 300px;
  max-height: 150px;
}
.hard {
  background-color: #e24747e5 !important;
}
.easy {
  background-color: #34e734c9 !important;
}
.buttonControlContainer {
  display: flex !important;
  flex-direction: column !important;
  max-width: 180px !important;
}
.buttonControl {
  margin: 10px !important;
}
.hideContainer {
  display: none !important;
}
.background1 {
  background-image: url(./img/textbook-bg1.jpg);
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}
.background2 {
  background-image: url(./img/textbook-bg2.jpg);
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}
.background3 {
  background-image: url(./img/textbook-bg3.jpg);
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}
.background4 {
  background-image: url(./img/textbook-bg4.jpg);
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}
.background5 {
  background-image: url(./img/textbook-bg5.jpg);
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}
.background6 {
  background-image: url(./img/textbook-bg6.jpg);
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}
.background7 {
  background-image: url(./img/textbook-bg7.jpg);
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}
.scroll {
  height: 50px !important;
  width: 60px !important;
}

